--- a/product1.html
+++ b/product1.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="assets/images/82857ece0869bbfd97910e2c6b3dee1.png" type="image/x-icon" />
   <meta name="description" content="" />
 
-  <title>Page 2</title>
+  <title>AIポイント管理システム | 株式会社ソフトユージング</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css" />
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css" />
   <link rel="stylesheet" href="assets/FontAwesome/css/font-awesome.css" />
@@ -242,6 +242,282 @@
     </nav>
   </section>
 
+  <section class="cid-rOMquMlWae" id="header03-0">
+
+
+
+
+
+    <div class="container align-center">
+      <div class="row justify-content-center">
+        <div class="mbr-white col-md-12 col-lg-12">
+          <div class="card">
+            <div class="content">
+              <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">AIポイント管理システム</h1>
+              <p class="mbr-text pb-3 mbr-semibold mbr-fonts-style display-7">
+                企業も、お客様も簡単に利用いただけます
+              </p>
+              <!-- <div class="mbr-section-btn pb-5"><a class="btn btn-sm btn-primary display-4" href="#">Sign up</a> <a class="btn btn-sm btn-black-outline display-4" href="#">Learn more</a></div> -->
+            </div>
+
+            <img src="assets/images/04.jpg" alt="">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="content07 cid-tziSb9hDaQ" id="content07-k">
+
+
+
+
+    <div class="container">
+      <div class="row justify-content-center">
+
+
+        <div class="card col-12 col-md-12 col-lg-6">
+          <div class="card-wrapper">
+            <div class="card-box align-center">
+
+
+              <h4 class="card-title align-center mbr-semibold pb-3 mbr-black mbr-fonts-style display-2">
+                <strong>AIポイント管理システムの特長</strong>
+              </h4>
+              <!-- <p class="mbr-text pb-3 mbr-regular mbr-black mbr-fonts-style display-7">Lorem ipsum dolor sit amet,
+                            consectetur adipiscing elit. Donec ullamcorper neque dapibus ipsum semper, sit amet luctus
+                            turpis porttitor. Ut libero ante, varius quis ligula consectetur tortor.</p> -->
+
+
+              <!-- <div class="link-wrap">
+
+                <h5 class="link mbr-bold mbr-black mbr-fonts-style display-7"><a href="#">Become a partner</a>
+                </h5>
+              </div> -->
+
+
+            </div>
+
+          </div>
+        </div>
+
+        <div class="card col-12 col-md-12 col-lg-6">
+
+          <div class="item-wrap">
+            <h5 class="item mbr-bold mbr-black mbr-fonts-style display-4">ポイント管理</h5>
+          </div>
+
+          <div class="item-wrap">
+            <h5 class="item mbr-bold mbr-black mbr-fonts-style display-4">会員管理&nbsp;</h5>
+          </div>
+
+          <div class="item-wrap">
+            <h5 class="item mbr-bold mbr-black mbr-fonts-style display-4">加盟店管理</h5>
+          </div>
+
+          <div class="item-wrap">
+            <h5 class="item mbr-bold mbr-black mbr-fonts-style display-4">キャンペーン管理
+            </h5>
+          </div>
+
+          <div class="item-wrap">
+            <h5 class="item mbr-bold mbr-black mbr-fonts-style display-4">AI分析
+            </h5>
+          </div>
+          <div class="item-wrap">
+            <h5 class="item mbr-bold mbr-black mbr-fonts-style display-4">販促機能</h5>
+          </div>
+
+        </div>
+
+
+
+
+      </div>
+    </div>
+  </section>
+
+  <section class="image04 cid-tAjPy6ubr9" id="image04-31">
+
+    <div class="container align-left">
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-12 col-lg-12">
+          <h2 class="mbr-section-title main-title mbr-fonts-style pb-5 align-center mbr-black display-2">
+            <strong>
+              AIポイント管理システムとは
+            </strong>
+          </h2>
+        </div>
+        <div class="mbr-white col-md-12 col-lg-12">
+          <div class="card-wrapper">
+            <!-- <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">
+              All major payment methods within reach
+            </h1>
+            <p class="mbr-text mbr-semibold mbr-fonts-style display-7">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p> -->
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="clients2 cid-rOMqx9oOyF" id="clients02-8">
+
+
+
+
+    <div class="container">
+      <div class="row justify-content-center">
+
+        <div class="col-12 col-md-12 col-lg-12">
+          <h2 class="mbr-section-title main-title mbr-fonts-style pb-5 align-center mbr-black display-2">
+            <strong>
+              特徴
+            </strong>
+          </h2>
+        </div>
+
+        <div class="card col-12 col-md-6 col-lg-3 md-pb">
+          <div class="card-wrapper mbr-flex">
+            <div class="img-wrapper align-center">
+              <img src="assets/images/1.png" alt="">
+            </div>
+            <div class="card-box align-center">
+
+              <h4 class="card-title align-center mbr-semibold mbr-fonts-style display-6">
+                <strong>インバウンド客向け</strong>
+              </h4>
+              <p class="mbr-text mbr-semibold mbr-fonts-style display-4">
+                多言語対応
+              </p>
+              <p class="mbr-text mbr-semibold mbr-fonts-style display-4">
+                外国語店舗連携
+              </p>
+              <!-- <div class="link-wrap">
+                <h5 class="link mbr-bold mbr-black mbr-fonts-style display-4"><a href="#" class="text-primary">Learn
+                    more</a></h5>
+              </div> -->
+            </div>
+
+          </div>
+        </div>
+
+        <div class="card col-12 col-md-6 col-lg-3">
+          <div class="card-wrapper mbr-flex">
+            <div class="img-wrapper align-center">
+              <img src="assets/images/2.png" alt="">
+            </div>
+            <div class="card-box align-center">
+
+              <h4 class="card-title align-center mbr-semibold mbr-fonts-style display-6">
+                <strong>感染症防止対策</strong>
+              </h4>
+              <p class="mbr-text mbr-semibold mbr-fonts-style display-4">
+                会話なし、接触なし
+              </p>
+              <p class="mbr-text mbr-semibold mbr-fonts-style display-4">
+                QRコードでポイント　GET
+              </p>
+             <!--  <div class="link-wrap">
+                <h5 class="link mbr-bold mbr-black mbr-fonts-style display-4"><a href="#" class="text-primary">Learn
+                    more</a></h5>
+              </div> -->
+            </div>
+
+          </div>
+        </div>
+
+        <div class="card col-12 col-md-6 col-lg-3">
+          <div class="card-wrapper mbr-flex">
+            <div class="img-wrapper align-center">
+              <img src="assets/images/3.png" alt="">
+            </div>
+            <div class="card-box align-center">
+
+              <h4 class="card-title align-center mbr-semibold mbr-fonts-style display-6">
+                <strong>楽してポイント管理</strong>
+              </h4>
+              <p class="mbr-text mbr-semibold mbr-fonts-style display-4">
+                自動加減算
+              </p>
+              <p class="mbr-text mbr-semibold mbr-fonts-style display-4">
+                自動償却
+              </p>
+              <!-- <div class="link-wrap">
+                <h5 class="link mbr-bold mbr-black mbr-fonts-style display-4"><a href="#" class="text-primary">Learn
+                    more
+                  </a>
+                </h5>
+              </div> -->
+            </div>
+
+          </div>
+        </div>
+
+        <div class="card col-12 col-md-6 col-lg-3">
+          <div class="card-wrapper mbr-flex">
+            <div class="img-wrapper align-center">
+              <img src="assets/images/4.png" alt="">
+            </div>
+            <div class="card-box align-center">
+
+              <h4 class="card-title align-center mbr-semibold mbr-fonts-style display-6">
+                <strong>売上向上</strong>
+              </h4>
+              <p class="mbr-text mbr-semibold mbr-fonts-style display-4">
+                AI販促機能
+              </p>
+              <p class="mbr-text mbr-semibold mbr-fonts-style display-4">
+                消費者行動分析
+              </p>
+              <!-- <div class="link-wrap">
+                <h5 class="link mbr-bold mbr-black mbr-fonts-style display-4"><a href="#" class="text-primary">Learn
+                    more</a></h5>
+              </div> -->
+            </div>
+
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+  </section>
+
+
+  <section class="image04 cid-tAjPy6ubr9" id="image04-32">
+    <div class="container align-left">
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-12 col-lg-12">
+          <h2 class="mbr-section-title main-title mbr-fonts-style pb-5 align-center mbr-black display-2">
+            <strong>
+              導入までの流れ
+            </strong>
+          </h2>
+        </div>
+        <div class="mbr-white col-md-12 col-lg-12">
+          <!-- <div class="card-wrapper">
+            <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">
+              All major payment methods within reach
+            </h1>
+            <p class="mbr-text mbr-semibold mbr-fonts-style display-7">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+
+          </div> -->
+          <div class="img-wrapper align-center">
+            <img src="assets\images\point03.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
   <section class="map1 cid-rOMrVNY2wf" id="map01-e">
     <div class="google-map container ">
       <iframe frameborder="0" style="border:0" src="assets\images\map.png " allowfullscreen="">
@@ -439,7 +715,8 @@
               <div class="soc-item">
                 <a href="https://instagram.com/mobirise" target="_blank">
                   <span class="socicon-instagram socicon mbr-iconfont
-                        mbr-iconfont-social"></span>
+                        mbr-iconfont-social">
+                  </span>
                 </a>
               </div>
               <div class="soc-item">
@@ -475,7 +752,7 @@
         </div>
         <div class="col-12 col-lg-6 col-md-8">
           <p class="mbr-text align-right mbr-fonts-style align-right display-4">
-            東京都品川区南大井3-20-5 SU大森ビル        
+            東京都品川区南大井3-20-5 SU大森ビル
           </p>
         </div>
 
