--- a/recuitment.html
+++ b/recuitment.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="assets/images/82857ece0869bbfd97910e2c6b3dee1.png" type="image/x-icon" />
   <meta name="description" content="" />
 
-  <title>Page 2</title>
+  <title>採用情報 | 株式会社ソフトユージング</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css" />
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css" />
   <link rel="stylesheet" href="assets/FontAwesome/css/font-awesome.css" />
@@ -240,6 +240,335 @@
         </div>
       </div>
     </nav>
+  </section>
+
+
+  <section class="header3 cid-tAk6uPb38g" data-bg-video="https://www.youtube.com/watch?v=36YgDDJ7XSc" id="header04-b">
+
+
+
+    <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);">
+    </div>
+    <div class="container">
+      <div class="row justify-content-center">
+
+
+        <div class="card col-12 col-md-12 col-lg-9">
+          <div class="card-wrapper">
+            <div class="card-box align-center">
+
+
+              <h4 class="card-title align-center mbr-semibold pb-3 mbr-black mbr-fonts-style display-1">
+                <strong>採用情報</strong>
+              </h4>
+              <p class="mbr-text pb-3 mbr-regular mbr-black mbr-fonts-style display-7">
+                人と人、人と物事を結びつける不思議な力やめぐり合わせを「縁」といいます。今日も素敵な出会いがありますように。</p>
+
+
+              <div class="link-wrap">
+
+                <h5 class="link mbr-bold mbr-black mbr-fonts-style display-7"><a href="contract.html">問い合わせ</a>
+                </h5>
+              </div>
+
+
+            </div>
+
+          </div>
+        </div>
+
+
+
+
+
+
+      </div>
+    </div>
+  </section>
+
+  <section class="content1 cid-tAk7B6uR76" id="content01-c">
+
+
+
+
+    <div class="container">
+      <div class="row justify-content-center">
+
+
+        <div class="card col-12 col-md-12 col-lg-8">
+          <div class="card-wrapper">
+            <div class="card-box ">
+              <h4 class="card-title  mbr-semibold pb-4 mbr-black mbr-fonts-style display-5">
+                <strong>社内研修制度が確立している</strong>
+              </h4>
+              <p class="mbr-text pb-2 mbr-semibold align-left mbr-black mbr-fonts-style display-4">
+                　定期的に実施する新人研修・リーダ研修・全社員研修を通じてビジネスマナー・セキュリティ・プロジェクトマネジメント・ヒューマンスキル研修を実施している。会社主催の研修の他に自主研修での各種ツール作成指導なども行っており、これらの研修は社員の人事評価にもリンクしている。
+              </p>
+              <h4 class="card-title  mbr-semibold pb-4 mbr-black mbr-fonts-style display-5">
+                <strong>社員寮を保有している</strong>
+              </h4>
+              <p class="mbr-text pb-2 mbr-semibold align-left mbr-black mbr-fonts-style display-4">
+                　社員寮を保有していることは会社福利厚生の大切な一環であり、社員の経済的負担の軽減になるとともに、社員同士のコミュニケーションも促進につながる。企業として社員が安心して生活できるよう
+              </p>
+              <h4 class="card-title  mbr-semibold pb-4 mbr-black mbr-fonts-style display-5">
+                <strong>人材の育成にも力を入れて社員と会社が共に成長できるよう取り組んでいる</strong>
+              </h4>
+              <p class="mbr-text pb-2 mbr-semibold align-left mbr-black mbr-fonts-style display-4">
+                　人材の育成にも力を入れて社員と会社が共に成長できるよう取り組んでおります。定期的に実施している新人研修・社員研修など、多様な研修制度を設けており、社員各々の取り組みはしっかりと人事評価へリンクされるよう体制を整えております。さらに弊社ではチームの力という点で、社員同士がお互いを助け合えるかどうを重視しており、その点について、自社資産である社員寮を保有し、社員の生活をサポートしており、今後も福利厚生を充実させていこうと考えております。これから、同じチームのメンバーとして、チャレンジ精神に溢れる方からのご応募をお待ちしておりますございます。
+              </p>
+            </div>
+
+          </div>
+        </div>
+
+
+
+      </div>
+    </div>
+  </section>
+
+  <section class="accordion1 cid-tAk7DrbocX" id="accordion01-d">
+
+
+
+
+    <div class="container">
+      <div class="row">
+        <h4 class="card-title align-center mbr-semibold pb-4 mbr-black mbr-fonts-style display-2">
+          <strong>募集要項</strong>
+        </h4>
+        <div class="col-12 col-md-12">
+          <div class="section-head text-center space30">
+
+          </div>
+          <div class="clearfix"></div>
+          <div id="bootstrap-accordion_43" class="panel-group accordionStyles accordion" role="tablist"
+            aria-multiselectable="true">
+            <div class="card">
+              <div class="card-header" role="tab" id="headingOne">
+                <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse1_43"
+                  aria-expanded="false" aria-controls="collapse1">
+                  <h4 class="mbr-fonts-style display-7">
+                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>仕事内容
+                  </h4>
+                </a>
+              </div>
+              <div id="collapse1_43" class="panel-collapse noScroll collapse " role="tabpanel"
+                aria-labelledby="headingOne" data-parent="#bootstrap-accordion_43">
+                <div class="panel-body">
+                  <p class="mbr-fonts-style panel-text display-4">
+                    ソフトウェア　開発システム開発
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" role="tab" id="headingTwo">
+                <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse2_43"
+                  aria-expanded="false" aria-controls="collapse2">
+                  <h4 class="mbr-fonts-style display-7">
+                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>応募資格
+                  </h4>
+                </a>
+
+              </div>
+              <div id="collapse2_43" class="panel-collapse noScroll collapse" role="tabpanel"
+                aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_43">
+                <div class="panel-body">
+                  <p class="mbr-fonts-style panel-text display-4">
+                    専門卒以上20-55歳位迄の方</p>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" role="tab" id="headingThree">
+                <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse3_43"
+                  aria-expanded="false" aria-controls="collapse3">
+                  <h4 class="mbr-fonts-style display-7">
+                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>言語
+                  </h4>
+                </a>
+              </div>
+              <div id="collapse3_43" class="panel-collapse noScroll collapse" role="tabpanel"
+                aria-labelledby="headingThree" data-parent="#bootstrap-accordion_43">
+                <div class="panel-body">
+                  <p class="mbr-fonts-style panel-text display-4">JAVA/C#/C/C++/.NET/PHP/SAP/IOT/python/andriod/IOS
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" role="tab" id="headingFour">
+                <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse4_43"
+                  aria-expanded="false" aria-controls="collapse4">
+                  <h4 class="mbr-fonts-style display-7">
+                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>
+                    データベース
+                  </h4>
+                </a>
+              </div>
+              <div id="collapse4_43" class="panel-collapse noScroll collapse" role="tabpanel"
+                aria-labelledby="headingFour" data-parent="#bootstrap-accordion_43">
+                <div class="panel-body">
+                  <p class="mbr-fonts-style panel-text display-4">
+                    ORACLE/DB2/SQLserver/MySQL
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" role="tab" id="headingFive">
+                <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse5_43"
+                  aria-expanded="false" aria-controls="collapse5">
+                  <h4 class="mbr-fonts-style display-7">
+                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>OS
+                  </h4>
+                </a>
+              </div>
+              <div id="collapse5_43" class="panel-collapse noScroll collapse" role="tabpanel"
+                aria-labelledby="headingFive" data-parent="#bootstrap-accordion_43">
+                <div class="panel-body">
+                  <p class="mbr-fonts-style panel-text display-4">
+                    Windows/Unix/Linux/andiod/IOS
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" role="tab" id="headingSix">
+                <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse6_43"
+                  aria-expanded="false" aria-controls="collapse6">
+                  <h4 class="mbr-fonts-style display-7">
+                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>形態
+                  </h4>
+                </a>
+              </div>
+              <div id="collapse6_43" class="panel-collapse noScroll collapse" role="tabpanel"
+                aria-labelledby="headingSix" data-parent="#bootstrap-accordion_43">
+                <div class="panel-body">
+                  <p class="mbr-fonts-style panel-text display-4">
+                    契約社員/正社員
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" role="tab" id="headingSix">
+                <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse7_43"
+                  aria-expanded="false" aria-controls="collapse6">
+                  <h4 class="mbr-fonts-style display-7">
+                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>勤務地
+                  </h4>
+                </a>
+              </div>
+              <div id="collapse7_43" class="panel-collapse noScroll collapse" role="tabpanel"
+                aria-labelledby="headingSix" data-parent="#bootstrap-accordion_43">
+                <div class="panel-body">
+                  <p class="mbr-fonts-style panel-text display-4">
+                    東京都内及び周辺地域
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" role="tab" id="headingSix">
+                <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse8_43"
+                  aria-expanded="false" aria-controls="collapse6">
+                  <h4 class="mbr-fonts-style display-7">
+                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>休日・休暇
+                  </h4>
+                </a>
+              </div>
+              <div id="collapse8_43" class="panel-collapse noScroll collapse" role="tabpanel"
+                aria-labelledby="headingSix" data-parent="#bootstrap-accordion_43">
+                <div class="panel-body">
+                  <p class="mbr-fonts-style panel-text display-4">
+                    完全週休2日制(土・日)、祝日、 年末年始休暇
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" role="tab" id="headingSix">
+                <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse9_43"
+                  aria-expanded="false" aria-controls="collapse6">
+                  <h4 class="mbr-fonts-style display-7">
+                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>福利厚生
+                  </h4>
+                </a>
+              </div>
+              <div id="collapse9_43" class="panel-collapse noScroll collapse" role="tabpanel"
+                aria-labelledby="headingSix" data-parent="#bootstrap-accordion_43">
+                <div class="panel-body">
+                  <p class="mbr-fonts-style panel-text display-4">
+                    各種保険完備、社員寮完備、通勤費補助有
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" role="tab" id="headingSix">
+                <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse10_43"
+                  aria-expanded="false" aria-controls="collapse6">
+                  <h4 class="mbr-fonts-style display-7">
+                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>社内制度
+                  </h4>
+                </a>
+              </div>
+              <div id="collapse10_43" class="panel-collapse noScroll collapse" role="tabpanel"
+                aria-labelledby="headingSix" data-parent="#bootstrap-accordion_43">
+                <div class="panel-body">
+                  <p class="mbr-fonts-style panel-text display-4">
+                    社員旅行、社員寮、社内開発、職位手当、社内研修、その他制度。
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" role="tab" id="headingSix">
+                <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse11_43"
+                  aria-expanded="false" aria-controls="collapse6">
+                  <h4 class="mbr-fonts-style display-7">
+                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>給与
+                  </h4>
+                </a>
+              </div>
+              <div id="collapse11_43" class="panel-collapse noScroll collapse" role="tabpanel"
+                aria-labelledby="headingSix" data-parent="#bootstrap-accordion_43">
+                <div class="panel-body">
+                  <p class="mbr-fonts-style panel-text display-4">
+                    年収300万円～1000万円
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" role="tab" id="headingSix">
+                <a role="button" class="collapsed panel-title" data-toggle="collapse" data-core="" href="#collapse12_43"
+                  aria-expanded="false" aria-controls="collapse6">
+                  <h4 class="mbr-fonts-style display-7">
+                    <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>応募メール
+                  </h4>
+                </a>
+              </div>
+              <div id="collapse12_43" class="panel-collapse noScroll collapse" role="tabpanel"
+                aria-labelledby="headingSix" data-parent="#bootstrap-accordion_43">
+                <div class="panel-body">
+                  <p class="mbr-fonts-style panel-text display-4">
+                    hr@softusing.co.jp
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-9" style="margin-top: 30px;">
+          <p class="mbr-semibold pb-4 mbr-black mbr-fonts-style display-7">
+            <a href="assets/images/採用選考に関する個人情報取扱いについて（告知書兼同意書）.pdf">採用選考に関する個人情報取扱いについて（告知書兼同意書）<br>*リンクを開いてからダウンロードをお願いします。</a>
+          </p>          
+        </div>
+      </div>
+    </div>
   </section>
 
   <section class="map1 cid-rOMrVNY2wf" id="map01-e">
@@ -475,7 +804,7 @@
         </div>
         <div class="col-12 col-lg-6 col-md-8">
           <p class="mbr-text align-right mbr-fonts-style align-right display-4">
-            東京都品川区南大井3-20-5 SU大森ビル        
+            東京都品川区南大井3-20-5 SU大森ビル
           </p>
         </div>
 
